--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,12 @@
+subprojects{
+  apply plugin: 'java'
+}
 
+project(':common') {
+  }
+  
+project(':server-core') {
+  }
+  
+  project(':tracker-core') {
+  }
