--- a/build.gradle
+++ b/build.gradle
@@ -8,5 +8,11 @@ project(':common') {
 project(':server-core') {
   }
   
+  project(':server-ui') {
+  }
+  
   project(':tracker-core') {
+  }
+  
+    project(':tracker-ui') {
   }
