--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ subprojects{
 
 project(':common') {
   dependencies{
-  //    testCompile group: 'junit', name: 'junit', version: '4.12'
+  //    testCompile group: 'junit', name: 'junit', version: '4.12'//
       compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
               }
   }
